cosmos-reference.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: cosmos-reference
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cosmos-reference
    spec:
      containers:
      - name: cosmos-reference
        image: anandbanik/cosmos-reference:1.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cosmos-reference
  # For Azure Internal LB only
  annotations: 
      service.beta.kubernetes.io/azure-load-balancer-internal: "true" 
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: cosmos-reference
