k8s-welcome-service.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: k8s-welcome
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s-welcome
    spec:
      containers:
      - name: k8s-welcome
        image: anandbanik/k8s-welcome:0.1
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-welcome
  # For Azure Internal LB only
  annotations: 
      service.beta.kubernetes.io/azure-load-balancer-internal: "true" 
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: k8s-welcome
