agw-deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /ip-tracing/*
        backend:
          serviceName: ip-tracing
          servicePort: 80
      - path: /cosmos-reference/*
        backend:
          serviceName: cosmos-reference
          servicePort: 80
      - path: /*
        backend:
          serviceName: k8s-welcome
          servicePort: 80
